--- a/ods_ci/utils/scripts/testconfig/test-variables.yml
+++ b/ods_ci/utils/scripts/testconfig/test-variables.yml
@@ -30,6 +30,7 @@ S3:
 ANACONDA_CE:
   ACTIVATION_KEY: ACE_ACTIVATION_KEY
 OCP_CONSOLE_URL: OPENSHIFT_CONSOLE_URL
+OCP_API_URL: OPENSHIFT_API_URL
 ODH_DASHBOARD_URL: RHODS_DASHBOARD_URL
 SERVICE_ACCOUNT:
   NAME: SERVICE_ACCOUNT_NAME
